--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,6 +1,8 @@
 <div class="full-page">
-    <div class="card shadow bg-white">
-        <h4 class="card-title text-center mb-4"> <i class="fa fa-bus"></i> Book Your Bus Ticket</h4>
+    <div class="card shadow">
+        <h4 class="card-title text-center mb-4">
+            <i class="fa fa-bus"></i> Book Your Bus Ticket
+        </h4>
         <form>
             <div class="row mb-3">
                 <div class="col-md-6 mb-3 mb-md-0">
