--- a/src/app/pages/search/search.component.css
+++ b/src/app/pages/search/search.component.css
@@ -1,32 +1,36 @@
- .full-page {
-     position: fixed;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100vh;
-     background: linear-gradient(to right, #ffe6f0, #ffccdc);
-     /* shaded pink */
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     padding: 20px;
-     z-index: 0;
-     overflow: hidden;
- }
+    .full-page {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: linear-gradient(to right, #ffe6f0, #ffccdc);
+        background-image: url('../../../../public/bug-bg.jpg');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        z-index: 0;
+        overflow: hidden;
+    }
 
- .card {
-     width: 100%;
-     max-width: 500px;
-     padding: 20px;
-     border-radius: 10px;
-     max-height: 90vh;
-     overflow-y: auto;
- }
+    .card {
+        width: 100%;
+        max-width: 700px;
+        padding: 20px;
+        border-radius: 10px;
+        max-height: 90vh;
+        overflow-y: auto;
+        background-color: rgba(255, 255, 255, 0.95);
+        /* light transparency */
+    }
 
- .card-title {
-     font-weight: bold;
- }
+    .card-title {
+        font-weight: bold;
+    }
 
- .input-group-text {
-     background-color: #e9ecef;
- }
+    .input-group-text {
+        background-color: #e9ecef;
+    }
