--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -9,14 +9,24 @@
                     <label for="from" class="form-label">From</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="fa fa-map-marker"></i></span>
-                        <input type="text" class="form-control" id="from" placeholder="Enter source city">
+                        <select class="form-select">
+                            <option value="">Select From Location</option>
+                            @for( item of locationList; track $index){
+                            <option [value]="item.locationId">{{item.locationName}}</option>
+                            }
+                        </select>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <label for="to" class="form-label">To</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="fa fa-map-marker"></i></span>
-                        <input type="text" class="form-control" id="to" placeholder="Enter destination city">
+                        <select class="form-select">
+                            <option value="">Select To Location</option>
+                            @for( item of locationList; track $index){
+                            <option [value]="item.locationId">{{item.locationName}}</option>
+                            }
+                        </select>
                     </div>
                 </div>
             </div>
