--- a/src/app/pages/search-result/search-result.component.html
+++ b/src/app/pages/search-result/search-result.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <a class="navbar-brand back-link" routerLink="/">
+        <i class="fa fa-arrow-left"></i> Back
+    </a>
     <div class="header">
         <h2><i class="fa fa-bus"></i> Available Buses</h2>
         <div class="button-group">
