add loader component

--- a/src/app/pages/search-result/search-result.component.html
+++ b/src/app/pages/search-result/search-result.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-loader [isVisible]="isLoading"></app-loader>
     <a class="navbar-brand back-link" routerLink="/">
         <i class="fa fa-arrow-left"></i> Back
     </a>
