--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,5 +13,10 @@
         </div>
 
         <button type="submit" [disabled]="loginForm.invalid">Login</button>
+        <div class="signup-link">
+            <a routerLink="/signup">
+                <i class="fa fa-sign-in"></i> Don't have an account! SignUp Here
+            </a>
+        </div>
     </form>
 </div>
