--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -8,9 +8,9 @@
 
         <div class="collapse navbar-collapse" id="navbarContent">
             <div class="ms-auto">
-                <button class="btn btn-outline-light" type="button">
+                <a routerLink="login">
                     <i class="fa fa-sign-in"></i> Login
-                </button>
+                </a>
             </div>
         </div>
     </div>
